# glissade

./: README.md
src/: pyproject.toml
src/glissade/: glissade.py  pava.py  preprocessing.py
