[project]
name = "glissade"
version = "0.0.1"
authors = [
  { name="Justin Sanders", email="jsander1@uw.edu" },
]
description = "FDR control for de novo sequencing"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.13"
dependencies = [
    "numpy<2.0",
    "pandas>2.3.0",
    "scipy>1.15",
    "matplotlib>3.10"
]

[project.scripts]
glissade = "glissade.glissade:main"

[tool.setuptools.packages.find]
exclude = ["data"]